# rgen

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: generate_small_dataset.py  quickstart.py
examples/datasets/: sample_tasks.jsonl  sample_tasks.yaml
examples/reports/: sample_report.md
rgen/: __init__.py  cli.py  io.py  report.py  schemas.py  stats.py  utils.py  validators.py
rgen/generators/: __init__.py  avoid_zone.py  base.py  impossible.py  pick_place.py  reach.py  sequence.py  sort.py  spatial.py
tests/: test_cli.py  test_generation.py  test_validation.py
